--- a/webistry_cdn/calculator.css
+++ b/webistry_cdn/calculator.css
@@ -147,6 +147,8 @@
   padding: 6px;
   border-radius: 50%;
   background: #F4F4F4;
+  width: 20px;
+  height: 20px;
 }
 
 .savings-calculator .savings-calculator__cta {
@@ -321,7 +323,6 @@
   position: relative;
   padding: 12px 22px 32px 22px;
   width: 50%;
-  height: 344px;
 }
 
 .savings-calculator .savings-calculator__result-card .savings-calculator__result-card__result {
