--- a/webistry_cdn/hp_savings_calculator/calculator.css
+++ b/webistry_cdn/hp_savings_calculator/calculator.css
@@ -149,12 +149,12 @@
   max-width: 100%;
 }
 
-.savings-calculator .savings-calculator__text-button .bi-chevron-compact-left {
+.savings-calculator .savings-calculator__text-button #calculator-chev-left {
   padding: 6px;
   border-radius: 50%;
   background: #F4F4F4;
-  width: 20px;
-  height: 20px;
+  width: 22px;
+  height: 22px;
 }
 
 .savings-calculator .savings-calculator__cta {
