update file version

--- a/webistry_cdn/hp_savings_calculator/style-v1.2.css
+++ b/webistry_cdn/hp_savings_calculator/style-v1.2.css
@@ -149,7 +149,7 @@
   max-width: 100%;
 }
 
-.savings-calculator .savings-calculator__text-button #calculator-chev-left {
+.savings-calculator .savings-calculator__text-button .calculator-chev-left {
   padding: 6px;
   border-radius: 50%;
   background: #F4F4F4;
