--- a/webistry_cdn/hp_savings_calculator/style-v1.12.css
+++ b/webistry_cdn/hp_savings_calculator/style-v1.12.css
@@ -466,7 +466,7 @@
     padding-top: 0;
   }
 
-  .savings-calculator .savings-calculator__step-block#calculator-step-block-3 .savings-calculator__back-button .bi-chevron-compact-left {
+  .savings-calculator .savings-calculator__step-block#calculator-step-block-3 .savings-calculator__back-button .calculator-chev-left {
     background-color: #fff;
   }
 
