--- a/webistry_cdn/hp_savings_calculator/style-v1.15.css
+++ b/webistry_cdn/hp_savings_calculator/style-v1.15.css
@@ -7,7 +7,7 @@
 
 /* v--- normalize all elements ---v */
 .savings-calculator * {
-  font-family: 'Forma DJR Micro', sans-serif;
+  font-family: 'Formadjrmicro', sans-serif;
   margin: 0;
   padding: 0;
   transition: all 0.2s ease-in-out;
