--- a/hp_savings_calculator/style-v1.21.css
+++ b/hp_savings_calculator/style-v1.21.css
@@ -25,8 +25,8 @@
 }
 
 .savings-calculator .savings-calculator__heading-block {
-  background-color: #AA5BED;
-  color: #fff;
+  background-color: #BB7CF1;
+  color: #000;
   margin-bottom: 12px;
   overflow: hidden;
 }
@@ -37,7 +37,7 @@
   font-weight: 400;
   margin: 0;
   padding: 32px 40px 30px 40px;
-  border-bottom: 1px solid #fff;
+  border-bottom: 1px solid #000;
 }
 
 .savings-calculator .savings-calculator__tags__wrapper {
@@ -64,8 +64,8 @@
 }
 
 .savings-calculator .savings-calculator__tags__tag.current-step .step-tag__order {
-  color: #AA5BED;
-  background-color: #fff;
+  color: #fff;
+  background-color: #000;
 }
 
 .savings-calculator .savings-calculator__tags .step-tag__order {
@@ -75,8 +75,8 @@
   height: 20px;
   width: 20px;
   margin-right: 6px;
-  border: 1px solid #fff;
-  border-radius: 50%;
+  color: #000;
+  border: 1px solid #000;
   font-size: 12px;
 }
 
